rgw/s3select: zero object size issue
Signed-off-by: Albin Antony <aantony@redhat.com>

--- a/qa/suites/rgw/verify/tasks/s3tests.yaml
+++ b/qa/suites/rgw/verify/tasks/s3tests.yaml
@@ -1,5 +1,5 @@
 tasks:
 - s3tests:
     client.0:
-      force-branch: s3select_error_response_tlg_run
+      force-branch: progress-stats
       rgw_server: client.0
